--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"moderní">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;' ikona pro validní chrome stránky">
 <!ENTITY Ctr_icopageinfo	"Favicona/globe-/'i'-icon: 'klik' otevře okno 'Informace o stránce'">
-<!ENTITY Ctr_lbsbsize		"Volitelná šířka pro adresní řádek a vyhledávač">
+<!ENTITY Ctr_lbsbsize		"Volitelná šířka">
 <!ENTITY Ctr_searchbar		"Vyhledávač">
 <!ENTITY Ctr_autocomplete	"Okno autokompletace">
 <!ENTITY Ctr_altautocompl	"Alternativní vzhled">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"Zrušit limit pro výšku">
 <!ENTITY Ctr_cresultshcb	"Custom height limit: ">
 <!ENTITY Ctr_lbsugres		"Počet výsledků">
-<!ENTITY Ctr_lbsbradius		"Volitelné zaoblení pro adresní řádek a vyhledávání">
+<!ENTITY Ctr_lbsbradius		"Volitelné zaoblení">
 
 <!ENTITY Ctr_menubar_items	"Umístění menu">
 <!ENTITY Ctr_extrabar		"Přídavné lišty">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"Poznámka: Přetažením tlačítka 'Pocket' do 'nastavení lišty' před změnou této předvolby zde, se odstraní vstupy v 'Pocket' z menu záložky a čtečky.">
 <!ENTITY Ctr_e_loop			"Hello / Loop / Volání a konverzace">
 <!ENTITY Ctr_e_readermode	"Mód čtečky">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Ikona audio na panelech">
 <!ENTITY Ctr_e_containertab	"Container Tabs">
