--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"moderne">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;'-ikon for gyldige 'om'-sider">
 <!ENTITY Ctr_icopageinfo	"Favicon/globe/'i'-ikon: 'klik' åbner 'sideoplysninger-vindue'">
-<!ENTITY Ctr_lbsbsize		"Brugerdefineret brede for adresselinje og søgelinje">
+<!ENTITY Ctr_lbsbsize		"Brugerdefineret brede">
 <!ENTITY Ctr_searchbar		"Søgelinje">
 <!ENTITY Ctr_autocomplete	"Autofuldfør-popup">
 <!ENTITY Ctr_altautocompl	"Alternativt udseende">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"Deaktivér højdegrænse">
 <!ENTITY Ctr_cresultshcb	"Custom height limit: ">
 <!ENTITY Ctr_lbsugres		"Antal resultater">
-<!ENTITY Ctr_lbsbradius		"Brugerdefineret kantradius for adresselinje og søgelinje">
+<!ENTITY Ctr_lbsbradius		"Brugerdefineret kantradius">
 
 <!ENTITY Ctr_menubar_items	"Placering af menupunkter">
 <!ENTITY Ctr_extrabar		"Yderligere værktøjslinjer">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"Bemærk: flyttes 'Pocket'-knappen til 'tilpasningspalet' før denne indstilling deaktiveres, vil det også fjerne 'Pocket'-poster fra bogmærker- og læser-menuer.">
 <!ENTITY Ctr_e_loop			"Hello / Opkald og samtale / Loop">
 <!ENTITY Ctr_e_readermode	"Læsertilstand">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Lydafspilningsikon på faneblade">
 <!ENTITY Ctr_e_containertab	"Container Tabs">
