--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"moderny">
 <!ENTITY Ctr_padlock_ext	"Symbol '&brandShortName;' za płaśiwe boki 'about'">
 <!ENTITY Ctr_icopageinfo	"Faworitowy symbol/globusowy symbol/'i'-symbol: 'Kliknjenje' wokno 'Info wó boku' wócynja">
-<!ENTITY Ctr_lbsbsize		"Swójska šyrokosć za adresowe pólo a pytańske pólo">
+<!ENTITY Ctr_lbsbsize		"Swójska šyrokosć">
 <!ENTITY Ctr_searchbar		"Pytańske pólo">
 <!ENTITY Ctr_autocomplete	"Wuskokujuce wokno awtowudopołnjenja">
 <!ENTITY Ctr_altautocompl	"Alternatiwny naglěd">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"Limit wusokosći znjemóžniś">
 <!ENTITY Ctr_cresultshcb	"Swójski limit wusokosći: ">
 <!ENTITY Ctr_lbsugres		"Licba wuslědkow">
-<!ENTITY Ctr_lbsbradius		"Swójski ramikowy wokłon za adresowe pólo a pytańske polo">
+<!ENTITY Ctr_lbsbradius		"Swójski ramikowy wokłon">
 
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
 <!ENTITY Ctr_extrabar		"Pśidatne symbolowe rědki">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"Glědajśo: Pśez pśesuwanje tłocaška 'Pocket' do 'pśiměrjeńskego wokna' pśed znjemóžnjanim toś togo nastajenja wótpórajo teke zapiski 'Pocket' w menijoma cytańskich znamjenjow a cytańskego modusa.">
 <!ENTITY Ctr_e_loop			"Hello / Loop / Telefoněrowanje a konwersacija">
 <!ENTITY Ctr_e_readermode	"Cytański modus">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowótgrawanje na rejtarkach">
 <!ENTITY Ctr_e_containertab	"Kontejnerowe rejtarki">
