--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"μοντέρνο">
 <!ENTITY Ctr_padlock_ext	"Εικονίδιο «&brandShortName;» για έγκυρες σελίδες «about»">
 <!ENTITY Ctr_icopageinfo	"Εικονίδιο υδρογείου/ιστότοπου/«i»: Άνοιγμα παραθύρου «Πληροφορίες σελίδας» με κλικ στο εικονίδιο">
-<!ENTITY Ctr_lbsbsize		"Προσαρμοσμένο εύρος γραμμών διευθύνσεων και αναζήτησης">
+<!ENTITY Ctr_lbsbsize		"Προσαρμοσμένο εύρος">
 <!ENTITY Ctr_searchbar		"Γραμμή αναζήτησης">
 <!ENTITY Ctr_autocomplete	"Αναδυόμενο αυτόματης συμπλήρωσης">
 <!ENTITY Ctr_altautocompl	"Εναλλακτική εμφάνιση">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"Απενεργοποίηση ορίου ύψους">
 <!ENTITY Ctr_cresultshcb	"Προσαρμοσμένο όριο ύψους: ">
 <!ENTITY Ctr_lbsugres		"Αριθμός αποτελεσμάτων">
-<!ENTITY Ctr_lbsbradius		"Προσαρμοσμένη ακτίνα περιγράμματος γραμμών τοποθεσιών και αναζήτησης">
+<!ENTITY Ctr_lbsbradius		"Προσαρμοσμένη ακτίνα περιγράμματος">
 
 <!ENTITY Ctr_menubar_items	"Θέση στοιχείων μενού της εργαλειοθήκης μενού">
 <!ENTITY Ctr_extrabar		"Επιπρόσθετες εργαλειοθήκες">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"Σημείωση: Μετακινώντας το κουμπί του «Pocket» στην παλέτα προσαρμογής πριν από την απενεργοποίηση αυτής της προτίμησης, απομακρύνονται επίσης και οι καταχωρίσεις του «Pocket» από τα μενού σελιδοδεικτών και αναγνώστη.">
 <!ENTITY Ctr_e_loop			"Hello / Loop / Κλήση και συνομιλία">
 <!ENTITY Ctr_e_readermode	"Λειτουργία ανάγνωσης">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Εικονίδιο αναπαραγωγής ήχου σε καρτέλες">
 <!ENTITY Ctr_e_containertab	"Καρτέλeς περιεκτών">
