--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"modern">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
 <!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
-<!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
+<!ENTITY Ctr_lbsbsize		"Custom width">
 <!ENTITY Ctr_searchbar		"Search bar">
 <!ENTITY Ctr_autocomplete	"Autocomplete popup">
 <!ENTITY Ctr_altautocompl	"Alternative appearance">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
 <!ENTITY Ctr_cresultshcb	"Custom height limit: ">
 <!ENTITY Ctr_lbsugres		"Number of results">
-<!ENTITY Ctr_lbsbradius		"Custom border roundness for location bar and search bar">
+<!ENTITY Ctr_lbsbradius		"Custom border roundness">
 
 <!ENTITY Ctr_menubar_items	"Menu items position">
 <!ENTITY Ctr_extrabar		"Additional Toolbars">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"Note: Moving Pocket button to 'Additional Tools and Features' area in 'Customize' mode before disabling this preference removes all Pocket-related entries from Bookmarks menu and Reader menu popups.">
 <!ENTITY Ctr_e_loop			"Hello / Calling and conversation / Loop">
 <!ENTITY Ctr_e_readermode	"Reader mode">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Audio playing icon on tabs">
 <!ENTITY Ctr_e_containertab	"Container Tabs">
