--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -16,7 +16,7 @@
 <!ENTITY Ctr_rr				"¡Requiere reiniciar!">
 <!ENTITY Ctr_window			"ventana">
 <!ENTITY Ctr_centered		"Centrado">
-<!ENTITY Ctr_page			"Page">
+<!ENTITY Ctr_page			"Página">
 
 <!ENTITY Ctr_cuibuttons		"Botones">
 <!ENTITY Ctr_cuibutnormal	"Normales">
@@ -278,13 +278,13 @@
 <!ENTITY Ctr_padlock_mod	"moderno">
 <!ENTITY Ctr_padlock_ext	"Icono de '&brandShortName;' para páginas about: válidas">
 <!ENTITY Ctr_icopageinfo	"Favicon/icono de globo-terráqueo/icono-'i': Hacer clic abre la 'ventana de información de la página'">
-<!ENTITY Ctr_lbsbsize		"Ancho personalizado para barra de direcciones y barra de búsqueda">
+<!ENTITY Ctr_lbsbsize		"Ancho personalizado">
 <!ENTITY Ctr_searchbar		"Barra de búsqueda">
 <!ENTITY Ctr_autocomplete	"Ménu emergente de autocompletado">
 <!ENTITY Ctr_urlbar_uc		"Deshabilitar 'Autocompletado unificado'">
 <!ENTITY Ctr_altautocompl	"Apariencia alternativa">
 <!ENTITY Ctr_autocompl_it	"Eliminar los elementos 'Buscar con...' y 'Visitar' (si están presentes)">
-<!ENTITY Ctr_acompl_search	"Show search engines">
+<!ENTITY Ctr_acompl_search	"Mostrar motores de búsqueda">
 <!ENTITY Ctr_autocompl_hl	"Resaltado de coincidencias">
 <!ENTITY Ctr_autocompl_rhl	"Colores Aero para resultados destacados">
 <!ENTITY Ctr_autocompl_not	"Ocultar título de página">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"Deshabilitar límite de altura">
 <!ENTITY Ctr_cresultshcb	"Límite de altura personalizado: ">
 <!ENTITY Ctr_lbsugres		"Número de resultados">
-<!ENTITY Ctr_lbsbradius		"Radio de borde redondeado personalizado para barra de direcciones y barra de búsqueda">
+<!ENTITY Ctr_lbsbradius		"Radio de borde redondeado personalizado">
 
 <!ENTITY Ctr_menubar_items	"Posición de los elementos del menú">
 <!ENTITY Ctr_extrabar		"Barras de herramientas adicionales">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"Hacerlo con el botón 'Pocket' en 'Personalizar' elimina sus menús en marcadores y vista de lectura.">
 <!ENTITY Ctr_e_loop			"Hello / Llamada y conversación / Loop">
 <!ENTITY Ctr_e_readermode	"Modo de vista de lectura">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Icono de reproducción de audio en las pestañas">
 <!ENTITY Ctr_e_containertab	"Pestañas contenedor">
