--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"Moderne">
 <!ENTITY Ctr_padlock_ext	"Afficher l'icône « &brandShortName; » pour les pages « about » valides">
 <!ENTITY Ctr_icopageinfo	"Favicon/globe/icône « i » : ouvrir la fenêtre « Informations sur la page » en cliquant sur l'icône">
-<!ENTITY Ctr_lbsbsize		"Personnaliser la largeur de la barre d'adresse et/ou de la barre de recherche">
+<!ENTITY Ctr_lbsbsize		"Personnaliser la largeur">
 <!ENTITY Ctr_searchbar		"Barre de recherche">
 <!ENTITY Ctr_urlbar_uc		"Désactiver la fonctionnalité « Autocomplétion unifiée »">
 <!ENTITY Ctr_autocomplete	"Fenêtre surgissante d'autocomplétion">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"Désactiver la limite de hauteur">
 <!ENTITY Ctr_cresultshcb	"Limite de hauteur personnalisée :">
 <!ENTITY Ctr_lbsugres		"Nombre de résultats :">
-<!ENTITY Ctr_lbsbradius		"Personnaliser le rayon de bordure de la barre d'adresse et/ou de la barre de recherche">
+<!ENTITY Ctr_lbsbradius		"Personnaliser le rayon de bordure">
 
 <!ENTITY Ctr_menubar_items	"Position des éléments de menu :">
 <!ENTITY Ctr_extrabar		"Barres d'outils supplémentaires">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"Note : déplacer le bouton « Pocket » vers la zone « Outils et fonctionnalités supplémentaires » de la « page de personnalisation » avant de désactiver ce paramètre supprime également toutes les entrées relatives à « Pocket » du menu des marque-pages et des fenêtres surgissantes du menu du mode lecture.">
 <!ENTITY Ctr_e_loop			"Hello / Appels et conversations">
 <!ENTITY Ctr_e_readermode	"Mode lecture">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Icône de lecture audio sur les onglets">
 <!ENTITY Ctr_e_containertab	"Onglets conteneurs">
