--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"moderny">
 <!ENTITY Ctr_padlock_ext	"Symbol '&brandShortName;' za płaćiwe strony 'about'">
 <!ENTITY Ctr_icopageinfo	"Faworitowy symbol/globusowy symbol/'i'-symbol: 'Kliknjenje' wokno 'Info wo stronje' wočinja">
-<!ENTITY Ctr_lbsbsize		"Swójska šěrokosć za adresowe polo a pytanske polo">
+<!ENTITY Ctr_lbsbsize		"Swójska šěrokosć">
 <!ENTITY Ctr_searchbar		"Pytanske polo">
 <!ENTITY Ctr_autocomplete	"Wuskakowace wokno awtowudospołnjenja">
 <!ENTITY Ctr_altautocompl	"Alternatiwny napohlad">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"Limit wysokosće znjemóžnić">
 <!ENTITY Ctr_cresultshcb	"Swójski limit wysokosće: ">
 <!ENTITY Ctr_lbsugres		"Ličba wuslědkow">
-<!ENTITY Ctr_lbsbradius		"Swójska ramikowa křiwizna za adresowe polo a pytanske polo">
+<!ENTITY Ctr_lbsbradius		"Swójska ramikowa křiwizna">
 
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
 <!ENTITY Ctr_extrabar		"Přidatne symbolowe lajsty">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"Kedźbu: Přez přesuwanje tłóčatka 'Pocket' do 'přiměrjenskeho wokna' před znjemóžnjenjom tutoho nastajenja wotstroni tež zapiski 'Pocket' w menijomaj zapołožkow a čitanskeho modusa.">
 <!ENTITY Ctr_e_loop			"Hello / Loop / Zawołanje a konwersacija">
 <!ENTITY Ctr_e_readermode	"Čitanski modus">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowothrawanje na rajtarkach">
 <!ENTITY Ctr_e_containertab	"Kontejnerowe rajtarki">
