--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"moderno">
 <!ENTITY Ctr_padlock_ext	"Icona di '&brandShortName;' per le pagine 'about' valide">
 <!ENTITY Ctr_icopageinfo	"Favicon/icona 'i'/globo: il 'clic' apre la finestra 'Informazioni pagina'">
-<!ENTITY Ctr_lbsbsize		"Larghezza personalizzata per la barra degli indirizzi e di ricerca">
+<!ENTITY Ctr_lbsbsize		"Larghezza personalizzata">
 <!ENTITY Ctr_searchbar		"Barra di ricerca">
 <!ENTITY Ctr_autocomplete	"Completamento automatico">
 <!ENTITY Ctr_altautocompl	"Aspetto alternativo">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"Disattiva il limite di altezza">
 <!ENTITY Ctr_cresultshcb	"Limite di altezza personalizzato: ">
 <!ENTITY Ctr_lbsugres		"Numero di risultati">
-<!ENTITY Ctr_lbsbradius		"Arrotondamento personalizzato della barra degli indirizzi e di ricerca">
+<!ENTITY Ctr_lbsbradius		"Arrotondamento personalizzato">
 
 <!ENTITY Ctr_menubar_items	"Posizione delle voci del menu">
 <!ENTITY Ctr_extrabar		"Barre degli strumenti aggiuntive">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"Nota: muovendo il pulsante 'Pocket' nella personalizzazione prima di disattivare questa opzione, Pocket viene rimosso dai segnalibri e dal menu di lettura.">
 <!ENTITY Ctr_e_loop			"Chiamate e conversazioni (Hello)">
 <!ENTITY Ctr_e_readermode	"Modalità lettura">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Icone altoparlanti nelle schede">
 <!ENTITY Ctr_e_containertab	"Schede container">
