--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"モダン">
 <!ENTITY Ctr_padlock_ext	"空白ページで &brandShortName; アイコンを表示する">
 <!ENTITY Ctr_icopageinfo	"クリックした時ページ情報ウィンドウを開く">
-<!ENTITY Ctr_lbsbsize		"ロケーションバーと検索バーの横幅を指定する">
+<!ENTITY Ctr_lbsbsize		"Custom width">
 <!ENTITY Ctr_searchbar		"検索バー">
 <!ENTITY Ctr_autocomplete	"自動補完リスト">
 <!ENTITY Ctr_altautocompl	"替わりの補完候補機能で置き換える">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"候補数を制限しない">
 <!ENTITY Ctr_cresultshcb	"リストの高さを制限する: ">
 <!ENTITY Ctr_lbsugres		"候補の表示数">
-<!ENTITY Ctr_lbsbradius		"ロケーションバーと検索バーの枠線の角の丸みを設定する">
+<!ENTITY Ctr_lbsbradius		"Custom border roundness">
 
 <!ENTITY Ctr_menubar_items	"メニュー項目の位置">
 <!ENTITY Ctr_extrabar		"追加のツールバー">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"注：ブックマークメニューとリーダーメニューのポップアップからすべての Pocket 関連のエントリを削除する前に、カスタマイズモードで「その他のツールと機能」領域に Pocket ボタンを移動してください。">
 <!ENTITY Ctr_e_loop			"&brandShortName; Hello">
 <!ENTITY Ctr_e_readermode	"リーダーモード">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"タブのサウンド再生アイコン">
 <!ENTITY Ctr_e_containertab	"コンテナタブ">
