--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"Nowoczesna">
 <!ENTITY Ctr_padlock_ext	"Ikona programu '&brandShortName;' dla ważnych stron 'about'">
 <!ENTITY Ctr_icopageinfo	"Ikona ulubionych/globu/'i': 'kliknięcie' otwiera 'okno informacji o stronie'">
-<!ENTITY Ctr_lbsbsize		"Niestandardowa szerokość paska adresu i paska wyszukiwania">
+<!ENTITY Ctr_lbsbsize		"Niestandardowa szerokość">
 <!ENTITY Ctr_searchbar		"Pasek wyszukiwania">
 <!ENTITY Ctr_autocomplete	"Menu podręczne autouzupełniania">
 <!ENTITY Ctr_altautocompl	"Alternatywny wygląd">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"Wyłącz ograniczenie wysokości">
 <!ENTITY Ctr_cresultshcb	"Niestandardowe ograniczenie wysokości: ">
 <!ENTITY Ctr_lbsugres		"Liczba wyników">
-<!ENTITY Ctr_lbsbradius		"Niestandardowe zaokrąglenia obrzeży paska adresu i paska wyszukiwania">
+<!ENTITY Ctr_lbsbradius		"Niestandardowe zaokrąglenia obrzeży">
 
 <!ENTITY Ctr_menubar_items	"Pozycje elementów menu">
 <!ENTITY Ctr_extrabar		"Dodatkowe paski narzędzi">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"Uwaga: przesunięcie przycisku Pocket do strefy 'Dodatkowe funkcje i opcje' w trybie 'Dostosuj' przed wyłączeniem tego ustawienia usunie z menu podręcznych Zakładki oraz Popraw czytelność wszystkie elementy związane z Pocket.">
 <!ENTITY Ctr_e_loop			"Hello / Dzwonienie i konwersacja / Loop">
 <!ENTITY Ctr_e_readermode	"Popraw czytelność">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Ikona odtwarzania dźwięku na kartach">
 <!ENTITY Ctr_e_containertab	"Karty z kontekstem">
