--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"Moderno">
 <!ENTITY Ctr_padlock_ext	"Ícone '&brandShortName;' para páginas 'about' válidas">
 <!ENTITY Ctr_icopageinfo	"Favicon/ícone do globo/'i': 'clique' abre 'janela de informações da página'">
-<!ENTITY Ctr_lbsbsize		"Largura personalizada para barra de localização e barra de pesquisa">
+<!ENTITY Ctr_lbsbsize		"Largura personalizada">
 <!ENTITY Ctr_searchbar		"Barra de pesquisa">
 <!ENTITY Ctr_autocomplete	"Popup auto completar">
 <!ENTITY Ctr_altautocompl	"Aparência alternativa">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"Desativar limite de altura">
 <!ENTITY Ctr_cresultshcb	"Limite de altura personalizado: ">
 <!ENTITY Ctr_lbsugres		"Número de resultados">
-<!ENTITY Ctr_lbsbradius		"Tamanho personalizado da borda para barra de localização e busca">
+<!ENTITY Ctr_lbsbradius		"Tamanho personalizado da borda">
 
 <!ENTITY Ctr_menubar_items	"Posição dos Itens do menu">
 <!ENTITY Ctr_extrabar		"Barras de ferramentas adicionais">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"Nota: mover o botão 'Pocket' para 'paleta de personalização' antes de desativar esta preferência também remove as entradas 'Pocket' nos menus de favoritos e leitura.">
 <!ENTITY Ctr_e_loop			"Hello / Chamada e conversação / Loop">
 <!ENTITY Ctr_e_readermode	"Modo de leitura">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Ícone de reprodução de áudio em abas">
 <!ENTITY Ctr_e_containertab	"Abas container">
