--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"сучасний">
 <!ENTITY Ctr_padlock_ext	"Іконка «&brandShortName;» для дійсних «Про...» сторінок">
 <!ENTITY Ctr_icopageinfo	"Іконка сайту, глобальна та «i» іконки: «клік» відкриває «вікно інформації про сторінку»">
-<!ENTITY Ctr_lbsbsize		"Налаштовувана ширина для панелей рядку адреси та пошуку">
+<!ENTITY Ctr_lbsbsize		"Налаштовувана ширина">
 <!ENTITY Ctr_searchbar		"Панель пошуку">
 <!ENTITY Ctr_autocomplete	"Спливаюче вікно автозаповнення">
 <!ENTITY Ctr_altautocompl	"Альтернативний вигляд">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"Вимкнути обмеження висоти">
 <!ENTITY Ctr_cresultshcb	"Налаштовуване обмеження висоти: ">
 <!ENTITY Ctr_lbsugres		"Кількість результатів">
-<!ENTITY Ctr_lbsbradius		"Налаштовуваний радіус рамки для панелей адреси та пошуку">
+<!ENTITY Ctr_lbsbradius		"Налаштовуваний радіус рамки">
 
 <!ENTITY Ctr_menubar_items	"Позиція пунктів меню">
 <!ENTITY Ctr_extrabar		"Додаткові панелі інструментів">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"Примітка: Переміщення кнопки «Кишеня» на сторінку «Пристосувати &brandShortName;» перед вимкненням цього налаштування також усуває написи «Кишеня» в закладках і меню читання.">
 <!ENTITY Ctr_e_loop			"Виклик та сеанс зв’язку">
 <!ENTITY Ctr_e_readermode	"Режим читання">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Кишеня">
 <!ENTITY Ctr_e_tabsaudioico	"Іконка аудіовідтворення на вкладках">
 <!ENTITY Ctr_e_containertab	"Контейнерні вкладки">
