--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"kaasaegne">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;i' ikoon kehtivate 'about'-lehtede jaoks">
 <!ENTITY Ctr_icopageinfo	"Lehe/gloobuse/'i'-ikoon: nendel klõpsamine avab akna 'veebilehe teave'">
-<!ENTITY Ctr_lbsbsize		"Asukohariba ja otsinguriba kohandatud laius">
+<!ENTITY Ctr_lbsbsize		"Custom width">
 <!ENTITY Ctr_searchbar		"Otsinguriba">
 <!ENTITY Ctr_autocomplete	"Automaatlõpetamise hüpik">
 <!ENTITY Ctr_altautocompl	"Alternatiivne välimus">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"Keela kõrguse piirang">
 <!ENTITY Ctr_cresultshcb	"Kõrguse kohandatud piirang: ">
 <!ENTITY Ctr_lbsugres		"Tulemuste arv">
-<!ENTITY Ctr_lbsbradius		"Asukohariba ja otsinguriba piirjoonte kohandatud ümarus">
+<!ENTITY Ctr_lbsbradius		"Custom border roundness">
 
 <!ENTITY Ctr_menubar_items	"Menüükirjete asukoht">
 <!ENTITY Ctr_extrabar		"Lisa-tööriistaribad">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"Märkus: Enne selle eelistuse keelamist 'Pocket'-nupu 'kohandamise aknasse' liigutamine eemaldab järjehoidjate ja lugemisnimekirja menüüdest ka kõik funktsiooniga 'Pocket' seotud kirjed.">
 <!ENTITY Ctr_e_loop			"Hello / Helistamine ja vestlus / Loop">
 <!ENTITY Ctr_e_readermode	"Lugemisvaade">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Heli esitamise ikoon kaartidel">
 <!ENTITY Ctr_e_containertab	"Konteinerkaardid">
