--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -278,7 +278,7 @@
 <!ENTITY Ctr_padlock_mod	"现代">
 <!ENTITY Ctr_padlock_ext	"合法的 'about' 页面显示 '&brandShortName;' 图标">
 <!ENTITY Ctr_icopageinfo	"网站图标/地球/“i”图标: “点击” 打开 “页面信息窗口”">
-<!ENTITY Ctr_lbsbsize		"自定义地址栏和搜索栏的宽度">
+<!ENTITY Ctr_lbsbsize		"Custom width">
 <!ENTITY Ctr_searchbar		"搜索栏">
 <!ENTITY Ctr_autocomplete	"自动完成弹出框">
 <!ENTITY Ctr_altautocompl	"备选的外观">
@@ -292,7 +292,7 @@
 <!ENTITY Ctr_lbsugresi		"禁用高度限制">
 <!ENTITY Ctr_cresultshcb	"自定义高度限制: ">
 <!ENTITY Ctr_lbsugres		"结果数量">
-<!ENTITY Ctr_lbsbradius		"自定义地址栏与搜索栏边框弧度">
+<!ENTITY Ctr_lbsbradius		"Custom border roundness">
 
 <!ENTITY Ctr_menubar_items	"菜单项目位置">
 <!ENTITY Ctr_extrabar		"附加工具栏">
@@ -380,6 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"注意: 在禁用该选项前移动“Pocket”按钮到 “定制面板” 同时会从书签和阅读菜单移除“Pocket”">
 <!ENTITY Ctr_e_loop			"呼叫与会话">
 <!ENTITY Ctr_e_readermode	"阅读模式">
+<!ENTITY Ctr_e_geolocation	"Geolocation">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"标签页上显示正在播放音频图标">
 <!ENTITY Ctr_e_containertab	"容器标签页">
