Updates to the Slovenian translation

--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -380,7 +380,7 @@
 <!ENTITY Ctr_fx38pocket2	"Opomba: premikanje gumba 'Pocket' v 'paleto za prilagoditev' pred onemogočanjem te nastavitve odstani tudi vnose 'Pocket' iz menijev zaznamkov in bralnika.">
 <!ENTITY Ctr_e_loop			"Hello / Loop / Klicanje in pogovori">
 <!ENTITY Ctr_e_readermode	"Način za branje">
-<!ENTITY Ctr_e_geolocation	"Geolocation">
+<!ENTITY Ctr_e_geolocation	"Lokacija">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Ikona predvajanja zvoka na zavihkih">
 <!ENTITY Ctr_e_containertab	"Zavihki vsebnika">
